--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 buildscript {
     repositories {
-        jcenter()
         maven { url = "http://files.minecraftforge.net/maven" }
+        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
     }
 }
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.minecraftforge.gradle'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 sourceSets.main {
@@ -19,31 +20,52 @@ sourceSets.main {
     }
 }
 
-version = "1.12.2-0.0.1.0"
+version = "1.13.2-0.0.1.0"
 def apiVersion = version
 group = "tk.rdvdev2.TimeTravelMod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "TimeTravelMod"
 
-sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
-compileJava {
-    sourceCompatibility = targetCompatibility = '1.8'
-}
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 minecraft {
-
-    version = "1.12.2-14.23.4.2705"
-    runDir = "run"
-    
     // the mappings can be changed at any time, and must be in the following format.
     // snapshot_YYYYMMDD   snapshot are built nightly.
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20171003"
+    mappings channel: 'snapshot', version: '20180921-1.13'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+
+    //accessTransformer = file('my_at.cfg')
+
+    // default run configurations.
+    // these can be tweaked, removed, or duplicated as needed.
+    runs {
+        client = {
+            // recommended logging data for a userdev environment
+            properties 'forge.logging.markers': 'SCAN,REGISTRIES,REGISTRYDUMP'
+            // recommended logging level for the console
+            properties 'forge.logging.console.level': 'debug'
+            workingDirectory project.file('run').canonicalPath
+            source sourceSets.main
+        }
+        server = {
+            // recommended logging data for a userdev environment
+            properties 'forge.logging.markers': 'SCAN,REGISTRIES,REGISTRYDUMP'
+            // recommended logging level for the console
+            properties 'forge.logging.console.level': 'debug'
+            workingDirectory project.file('run').canonicalPath
+            source sourceSets.main
+        }
+    }
 }
 
 dependencies {
+    // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
+    // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
+    // The userdev artifact is a special name and will get all sorts of transformations applied to it.
+    minecraft 'net.minecraftforge:forge:1.13.2-25.0.21'
+
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
     //compile "some.group:artifact:version:classifier"
@@ -56,10 +78,8 @@ dependencies {
     // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
     //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
 
-    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
-    // except that these dependencies get remapped to your current MCP mappings
-    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
+    // These dependencies get remapped to your current MCP mappings
+    //deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'
 
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
@@ -67,7 +87,8 @@ dependencies {
 
 }
 
-processResources {
+// Example for how to get properties into the manifest for reading by the runtime..
+jar {
     def versionPropsFile = file('version.properties')
 
     if (versionPropsFile.canRead()) {
@@ -82,39 +103,18 @@ processResources {
 
         versionProps['PATCH'] = patch.toString()
         versionProps.store(versionPropsFile.newWriter(), null)
-        apiVersion = project.minecraft.version.toString() + "-" + majormod + "." + majorapi
+        apiVersion = "1.13.2-" + majormod + "." + majorapi
 
-        project.version = project.minecraft.version.toString() + "-" + majormod + "." + majorapi + "." + minor + "." + patch.toString()
+        project.version = "1.13.2-" + majormod + "." + majorapi + "." + minor + "." + patch.toString()
     }
-    // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
 
-    // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-                
-        // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+    manifest {
+        attributes(["Specification-Title": "Time Travel Mod",
+                    "Specification-Vendor": "rdvdev2",
+                    "Specification-Version": "24.0", // We are version 1 of the modlauncher specification
+                    "Implementation-Title": "Time Travel Mod",
+                    "Implementation-Version": "${version}",
+                    "Implementation-Vendor" :"rdvdev2",
+                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")],)
     }
-        
-    // copy everything else except the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
-    }
-}
-
-task packApi(type: Jar, dependsOn: "classes") {
-    outputs.upToDateWhen {false}
-    baseName = "TimeTravelMod-API"
-    from (sourceSets.main.output) {
-        excludes.addAll("assets")
-        excludes.addAll("com/rdvdev2/TimeTravelMod/Mod*")
-        excludes.addAll("com/rdvdev2/TimeTravelMod/TimeTravelMod")
-        excludes.addAll("com/rdvdev2/TimeTravelMod/client")
-        excludes.addAll("com/rdvdev2/TimeTravelMod/common")
-        excludes.addAll("com/rdvdev2/TimeTravelMod/proxy")
-        includes.addAll("com/rdvdev2/TimeTravelMod/api/**")
-    }
-    packApi.version = apiVersion
 }
