--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,7 +1,7 @@
 files:
-  - source: /src/main/resources/assets/timetravelmod/lang/en_us.lang
+  - source: /src/main/resources/assets/timetravelmod/lang/en_us.json
     translation: >-
-      /src/main/resources/assets/timetravelmod/lang/%locale_with_underscore%.lang
+      /src/main/resources/assets/timetravelmod/lang/%locale_with_underscore%.json
     languages_mapping:
       locale_with_underscore:
         es-ES: es_es
