--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,26 +9,26 @@ modLoader="javafml" #mandatory
 loaderVersion="[25,)" #mandatory (24 is current forge version)
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
-# The modid of the mod
-modId="timetravelmod" #mandatory
-# The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="${file.jarVersion}" #mandatory
- # A display name for the mod
-displayName="Time Travel Mod" #mandatory
-# A URL to query for updates for this mod. See the JSON tick specification <here>
-updateJSONURL="https://raw.githubusercontent.com/rdvdev2/TimeTravelMod/1.13.2/updates.json" #optional
-# A URL to refer people to when problems occur with this mod
-issueTrackerURL="https://github.com/rdvdev2/TimeTravelMod/issues" #optional
-# A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL="https://minecraft.curseforge.com/projects/time-travel-mod" #optional
-# A file name (in the root of the mod JAR) containing a logo for display
-logoFile="" #optional
-# A text field displayed in the mod UI
-credits="Thanks to marfega for the idea of the mod." #optional
-# A text field displayed in the mod UI
-authors="rdvdev2" #optional
-# The description text for the mod (multi line!) (#mandatory)
-description='''
+    # The modid of the mod
+    modId="timetravelmod" #mandatory
+    # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
+    version="${version}" #mandatory
+    # A display name for the mod
+    displayName="Time Travel Mod" #mandatory
+    # A URL to query for updates for this mod. See the JSON tick specification <here>
+    updateJSONURL="https://raw.githubusercontent.com/rdvdev2/TimeTravelMod/1.13.2/updates.json" #optional
+    # A URL to refer people to when problems occur with this mod
+    issueTrackerURL="https://github.com/rdvdev2/TimeTravelMod/issues" #optional
+    # A URL for the "homepage" for this mod, displayed in the mod UI
+    displayURL="https://minecraft.curseforge.com/projects/time-travel-mod" #optional
+    # A file name (in the root of the mod JAR) containing a logo for display
+    logoFile="logo.png" #optional
+    # A text field displayed in the mod UI
+    credits="Thanks to marfega for the idea of the mod." #optional
+    # A text field displayed in the mod UI
+    authors="rdvdev2" #optional
+    # The description text for the mod (multi line!) (#mandatory)
+    description='''
 Ever wanted to travel through time in Minecraft? Build your own time travel machine and discover a bunch of new worlds, objects and mobs!
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
