--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
+apply plugin: 'eclipse'
+apply plugin: 'maven-publish'
 
 version = "1.13.2-0.0.1.0"
 def apiVersion = version
@@ -79,7 +81,7 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.13.2-25.0.100'
+    minecraft 'net.minecraftforge:forge:1.13.2-25.0.193'
 
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
