--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ minecraft {
     mappings channel: 'snapshot', version: '20190608-1.14.2'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
-    //accessTransformer = file('my_at.cfg')
+    accessTransformer = file('src/main/resources/META-INF/timetravelmod_at.cfg')
 
     // default run configurations.
     // these can be tweaked, removed, or duplicated as needed.
@@ -81,7 +81,7 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.14.2-26.0.14'
+    minecraft 'net.minecraftforge:forge:1.14.2-26.0.33'
 
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
