--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,49 +1,27 @@
-# This is an example mods.toml file. It contains the data relating to the loading mods.
-# There are several mandatory fields (#mandatory), and many more that are optional (#optional).
-# The overall format is standard TOML format, v0.5.0.
-# Note that there are a couple of TOML lists in this file.
-# Find more information on toml format here:  https://github.com/toml-lang/toml
-# The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
-modLoader="javafml" #mandatory
-# A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion="[26,)" #mandatory (24 is current forge version)
-# A list of mods - how many allowed here is determined by the individual mod loader
-[[mods]] #mandatory
-    # The modid of the mod
-    modId="timetravelmod" #mandatory
-    # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-    version="${version}" #mandatory
-    # A display name for the mod
-    displayName="Time Travel Mod" #mandatory
-    # A URL to query for updates for this mod. See the JSON tick specification <here>
-    updateJSONURL="https://raw.githubusercontent.com/rdvdev2/TimeTravelMod/1.14.2/updates.json" #optional
-    # A URL to refer people to when problems occur with this mod
-    issueTrackerURL="https://github.com/rdvdev2/TimeTravelMod/issues" #optional
-    # A URL for the "homepage" for this mod, displayed in the mod UI
-    displayURL="https://minecraft.curseforge.com/projects/time-travel-mod" #optional
-    # A file name (in the root of the mod JAR) containing a logo for display
-    logoFile="logo.png" #optional
-    # A text field displayed in the mod UI
-    credits="Thanks to marfega for the idea of the mod." #optional
-    # A text field displayed in the mod UI
-    authors="rdvdev2" #optional
-    # The description text for the mod (multi line!) (#mandatory)
+modLoader="javafml"
+loaderVersion="[26,)" # 26 -> 1.14.2
+
+[[mods]]
+    modId="timetravelmod"
+    version="${version}"
+    displayName="Time Travel Mod"
+    updateJSONURL="https://raw.githubusercontent.com/rdvdev2/TimeTravelMod/1.14.2/updates.json"
+    issueTrackerURL="https://github.com/rdvdev2/TimeTravelMod/issues"
+    displayURL="https://minecraft.curseforge.com/projects/time-travel-mod"
+    logoFile="logo.png"
+    credits="Thanks to marfega for the idea of the mod."
+    authors="rdvdev2"
     description='''
 Ever wanted to travel through time in Minecraft? Build your own time travel machine and discover a bunch of new worlds, objects and mobs!
 '''
-# A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.timetravelmod]] #optional
-    # the modid of the dependency
-    modId="forge" #mandatory
-    # Does this dependency have to exist - if not, ordering below must be specified
-    mandatory=true #mandatory
-    # The version range of the dependency
-    versionRange="[26,)" #mandatory
-    # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
+
+[[dependencies.timetravelmod]]
+    modId="forge"
+    mandatory=true
+    versionRange="[26,)" # 26 -> 1.14.2
     ordering="NONE"
-    # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
-# Here's another dependency
+
 [[dependencies.timetravelmod]]
     modId="minecraft"
     mandatory=true
