--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = "1.14.4-0.0.1.0"
-def apiVersion = version
+def apiVersion
 group = "tk.rdvdev2.TimeTravelMod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "TimeTravelMod"
 
@@ -118,21 +117,19 @@ jar {
 
 processResources {
     def versionPropsFile = file('version.properties')
+    inputs.file versionPropsFile
 
-    if (versionPropsFile.canRead()) {
-        def Properties versionProps = new Properties()
+    def Properties versionProps = new Properties()
 
-        versionProps.load(new FileInputStream(versionPropsFile))
+    versionProps.load(new FileInputStream(versionPropsFile))
 
-        def majormod = versionProps['MAJORMOD']
-        def majorapi = versionProps['MAJORAPI']
-        def minor = versionProps['MINOR']
-        def patch = versionProps['PATCH']
+    def majormod = versionProps['MAJORMOD']
+    def majorapi = versionProps['MAJORAPI']
+    def minor = versionProps['MINOR']
+    def patch = versionProps['PATCH']
         
-        apiVersion = "1.14.4-" + majormod + "." + majorapi
-
-        project.version = "1.14.4-" + majormod + "." + majorapi + "." + minor + "." + patch
-    }
+    apiVersion = "1.14.4-" + majormod + "." + majorapi
+    project.version = "1.14.4-" + majormod + "." + majorapi + "." + minor + "." + patch
     
     // replace stuff in mods.toml, nothing else
     from(sourceSets.main.resources.srcDirs) {
