--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,6 @@ public net.minecraft.entity.player.ServerPlayerEntity field_184851_cj # invulner
 public net.minecraft.entity.player.ServerPlayerEntity field_71144_ck # lastExperience
 public net.minecraft.entity.player.ServerPlayerEntity field_71149_ch # lastHealth
 public net.minecraft.entity.player.ServerPlayerEntity field_71146_ci # lastFoodLevel
+
+# For BiomeProviderType creation
+public net.minecraft.world.biome.provider.BiomeProviderType <init>(Ljava/util/function/Function;Ljava/util/function/Function;)V # constructor
