--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Aug 10 19:22:55 CEST 2018
+#Wed Jan 01 23:22:52 CET 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.5-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.5-bin.zip
+zipStoreBase=GRADLE_USER_HOME
